Add repo, mapper, entities